--- a/Jokes.ipynb
+++ b/Jokes.ipynb
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 21,
       "metadata": {
         "id": "HTiaTu6O1LRC"
       },
@@ -132,6 +132,7 @@
         "from google.colab import userdata\n",
         "\n",
         "GOOGLE_API_KEY=userdata.get('GOOGLE_API_KEY')\n",
+        "JOKE=userdata.get('JOKE')\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
@@ -148,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 22,
       "metadata": {
         "id": "s-JqXcDe2hZ_"
       },
@@ -168,60 +169,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 24,
       "metadata": {
-        "id": "j51mcrLD4Y2W",
-        "outputId": "df2fc6ff-924c-4ed0-cfe8-a705c62702d1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "j51mcrLD4Y2W"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "tell me 10 different jokes\n"
-          ]
-        }
-      ],
-      "source": [
-        "prompt = input()"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
       "source": [
-        "response = model.generate_content(prompt)\n",
+        "print(\"___________________________________Welcome to Jokester 😃________________________________\")\n",
+        "print(\"description: This bot only provides the jokes abd joke related stuffs so you can't do any other thing here 🙂\")\n",
+        "prompt = input(\"Enter Something :\")\n",
+        "response = model.generate_content(JOKE + prompt)\n",
         "print(response.text)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 191
+          "height": 121
         },
-        "id": "I18vi0WzIJV1",
-        "outputId": "8f611f73-6de7-4cb8-8d8a-b088322dea89"
+        "id": "pozY0Bq2QAR2",
+        "outputId": "c87a8b10-201b-4589-8d16-9cb0fdad092f"
       },
-      "execution_count": 8,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1. What do you call a boomerang that doesn't come back? A stick.\n",
-            "2. What do you call a belt made out of watches? A waist of time.\n",
-            "3. Why did the scarecrow win an award? Because he was outstanding in his field.\n",
-            "4. What do you call a fish with no eyes? Fsh!\n",
-            "5. Why did the student eat his homework? Because the teacher told him it was a piece of cake.\n",
-            "6. What do you call a cow with no legs? Ground beef.\n",
-            "7. Why did the golfer wear two pairs of pants? In case he got a hole-in-one.\n",
-            "8. What do you call a bee that can't make up its mind? A maybe.\n",
-            "9. Why did the computer go to the chiropractor? It had a back-up.\n",
-            "10. What did the janitor say when he jumped out of the closet? \"Supplies!\"\n"
+            "___________________________________Welcome to Jokester 😃________________________________\n",
+            "description: This bot only provides the jokes abd joke related stuffs so you can't do any other thing here 🙂\n",
+            "Enter Something :Make me laugh\n",
+            "Why did the scarecrow win an award?\n",
+            "\n",
+            "Because he was outstanding in his field!\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "I18vi0WzIJV1"
+      },
+      "execution_count": 24,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
